[package]
name = "hello_world_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rect_shape = { path = "../../rect_shape" }
rect_shape_derive = { path = "../../rect_shape/rect_shape_derive" }
attribute_macros_lib = { path = "../../attribute_macros_lib"}